--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wagtail",
+  "name": "BalkanCMS_core",
   "version": "1.0.0",
-  "repository": "https://github.com/torchbox/wagtail",
+  "repository": "https://github.com/balkantechnologies/BalkanCMS_core",
   "private": true,
   "browser": {},
   "browserify": {
